fixing background contrasts and link names

--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -31,7 +31,7 @@
 
     a {
         text-decoration: none;
-        color: #8f9296;
+        color: #e1e8f1;
     }
     a:hover {
         color: #fff;
