--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -99,7 +99,7 @@ $screen-lg-min: 992px;
     text-decoration: none;
     border-radius: 15px;
     color: #fff;
-    background-color: #11cedb;
+    background-color: #047a83;
     padding: .4rem;
     display: block;
     max-width: 8rem;
@@ -109,9 +109,7 @@ $screen-lg-min: 992px;
 
 }
 
-.more:hover {
 
-}
 
 .morec {
     margin-top: auto;
